fix: hide interactive stuff on mobile because debugging it feels like a lot rn

--- a/css/warkon.css
+++ b/css/warkon.css
@@ -43,9 +43,9 @@ video {
   height: 100vh;
   overflow: scroll;
 }
-/*#interactives {
+#interactives {
   display:none;
-}*/
+}
 #intro {
   text-align: center;
   margin-top: 40px;
@@ -117,9 +117,9 @@ body#not-found #intro {
     overflow: hidden;
     position: relative;
   }
-  /*#interactives {
+  #interactives {
     display:block;
-  }*/
+  }
   #content {
     position: fixed;
     width: 100%;
